[package]
name = "rcrypto"
version = "0.1.0"
authors = ["Tino"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rcrypto"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.15.0"

[dev-dependencies]
rustc-serialize = "^0.3"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[dependencies]
md-5 = { version = "0.9.1", default-features = false }
sha-1 = { version = "0.9.2", default-features = false }
sha2 = { version = "0.9.2", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
blake2 = { version = "0.9.1", default-features = false }
blake3 = { version = "0.3.7", default-features = false }
whirlpool = { version = "0.9.0", default-features = false }
hmac = { version = "0.10.1", default-features = false }
groestl = { version = "0.9.0", default-features = false }