[package]
name = "rcrypto"
version = "0.1.0"
authors = ["Tino"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rcrypto"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.26.0"

[dev-dependencies]
rustc-serialize = "0.3.25"
criterion = "0.5.1"
serial_test = "3.1.1"
serial_test_derive = "3.1.1"

[[bench]]
name = "bench"
harness = false

[dependencies]
digest = { version = "0.10.7", default-features = true }
md-5 = { version = "0.10.6", default-features = true }
sha-1 = { version = "0.10.1", default-features = true }
sha2 = { version = "0.10.8", default-features = true }
sha3 = { version = "0.10.8", default-features = true }
blake2 = { version = "0.10.6", default-features = true }
blake3 = { version = "1.5.1", default-features = true }
whirlpool = { version = "0.10.4", default-features = true }
hmac = { version = "0.12.1", default-features = true }
groestl = { version = "0.10.1", default-features = true }
ripemd = { version = "0.1.3", default-features = true }
shabal = { version = "0.4.1", default-features = true }